--- a/SalesWEB/appsettings.json
+++ b/SalesWEB/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWEBContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWEBContext-27fc948c-c87a-4815-8693-760d2f2ba969;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
