MySql adaptation and first migration

--- a/SalesWEB/appsettings.json
+++ b/SalesWEB/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWEBContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWEBContext-27fc948c-c87a-4815-8693-760d2f2ba969;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWEBContext": "server=localhost;userid=developer;password=12345678;database=salesweb"
   }
 }
